<?xml version="1.0" encoding="UTF-8"?>
<!--
This file is part of Catch The Ball.

Catch The Ball is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Catch The Ball is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Catch The Ball.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Catch The Ball</string>
    <string name="main_title">Catch The Ball</string>
    <string name="credit_title">by Dylan Taylor</string>
    <string name="start_label">Start Game</string>
    <string name="about_label">About Game</string>
    <string name="exit_label">Exit Game</string>
    <string name="about_title">About Catch The Ball</string>
    <string name="about_text">I started this project in order to learn how to create Android applications.
        The object of the game is to tap on the ball bouncing around the screen before the timer runs out.
        As you progress through levels, your reflexes will be challenged by the gradually increasing speed of the ball.
        The higher the difficulty, the less time you have.
        If you miss the ball, you lose a second.
        Run out of time, and you lose.
        Although easy mode gives you plenty of time with 12 seconds, insane mode only gives you 3.\n\n
        <i>Are you up to the challenge?</i>
    </string>
    <string name="easy_label">Easy Mode</string>
    <string name="medium_label">Medium Mode</string>
    <string name="hard_label">Hard Mode</string>
    <string name="insane_label">Insane Mode</string>
</resources>
