<!--
This file is part of Catch The Ball.

Catch The Ball is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Catch The Ball is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Catch The Ball.  If not, see <http://www.gnu.org/licenses/>.
-->
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background" android:layout_height="fill_parent"
    android:layout_width="fill_parent" android:padding="30dip"
    android:orientation="vertical">
    <LinearLayout android:orientation="vertical"
        android:layout_height="wrap_content" android:layout_width="fill_parent"
        android:layout_gravity="center">
        <TextView android:text="@string/main_title"
            android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_gravity="center" android:layout_marginBottom="5dip"
            android:textSize="24.5sp" />
        <TextView android:text="@string/credit_title"
            android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_gravity="center" android:layout_marginBottom="20dip"
            android:textSize="13sp" />
        <Button android:id="@+id/easy_button" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/easy_label" />
        <Button android:id="@+id/medium_button" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/medium_label" />
        <Button android:id="@+id/hard_button" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/hard_label" />
        <Button android:id="@+id/insane_button" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/insane_label" />
        <Button android:id="@+id/about_button" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/about_label" />
        <Button android:id="@+id/exit_button" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/exit_label" />
    </LinearLayout>
</LinearLayout>
